name:                adventofcode
version:             0.1.0.0
synopsis:            Haskell solutions to adventofcode
description:         Please see README.md
homepage:            https://github.com/tylerjl/adventofcode
license:             MIT
license-file:        LICENSE
author:              Tyler Langlois
maintainer:          ty@tjll.net
-- copyright:           
category:            Web
build-type:          Simple
-- extra-source-files:  
cabal-version:       >=1.10

executable adventofcode
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       adventofcode
                     , base
                     , bytestring
                     , safe
  default-language:    Haskell2010

library
  hs-source-dirs:      src
  default-extensions:  QuasiQuotes
  exposed-modules:     Y2015
                     , Y2015.Util
                     , Y2015.D01
                     , Y2015.D02
                     , Y2015.D03
                     , Y2015.D04
                     , Y2015.D05
                     , Y2015.D06
                     , Y2015.D07
                     , Y2015.D08
                     , Y2015.D09
                     , Y2015.D10
                     , Y2015.D11
                     , Y2015.D12
                     , Y2015.D13
                     , Y2015.D14
                     , Y2015.D15
                     , Y2015.D16
                     , Y2015.D17
                     , Y2015.D18
  build-depends:       aeson
                     , base >= 4.7 && < 5
                     , base16-bytestring
                     , bytestring
                     , containers
                     , cryptohash
                     , memoize
                     , parsec
                     , repa
                     , safe
                     , scientific
                     , unordered-containers
                     , vector
  default-language:    Haskell2010

test-suite adventofcode-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , adventofcode
                     , bytestring
                     , hspec
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/tylerjl/adventofcode
