name:                adventofcode
version:             0.1.0.0
synopsis:            Haskell solutions to adventofcode
description:         Please see README.md
homepage:            https://github.com/tylerjl/adventofcode
license:             MIT
license-file:        LICENSE
author:              Tyler Langlois
maintainer:          ty@tjll.net
-- copyright:
category:            Web
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

executable adventofcode
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N -Wall -Werror
  build-depends:       adventofcode
                     , base
                     , bytestring
                     , safe
                     , MissingH
  default-language:    Haskell2010

library
  hs-source-dirs:      src
  default-extensions:  QuasiQuotes
  ghc-options:         -Wall -Werror
  exposed-modules:     Y2015
                     , Y2016
                     , Y2015.Util
                     , Y2015.D01
                     , Y2015.D02
                     , Y2015.D03
                     , Y2015.D04
                     , Y2015.D05
                     , Y2015.D06
                     , Y2015.D07
                     , Y2015.D08
                     , Y2015.D09
                     , Y2015.D10
                     , Y2015.D11
                     , Y2015.D12
                     , Y2015.D13
                     , Y2015.D14
                     , Y2015.D15
                     , Y2015.D16
                     , Y2015.D17
                     , Y2015.D18
                     , Y2015.D19
                     , Y2015.D20
                     , Y2015.D21
                     , Y2015.D22
                     , Y2015.D23
                     , Y2015.D24
                     , Y2015.D25
                     , Y2016.D01
                     , Y2016.D02
  build-depends:       aeson
                     , base >= 4.7 && < 5
                     , base16-bytestring
                     , bytestring
                     , containers
                     , cryptohash
                     , lens
                     , matrix
                     , memoize
                     , parsec
                     , repa
                     , safe
                     , scientific
                     , unordered-containers
                     , vector
  default-language:    Haskell2010

test-suite adventofcode-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , adventofcode
                     , bytestring
                     , containers
                     , hspec
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

benchmark criterion
  default-language: Haskell2010
  hs-source-dirs:   benchmark
  main-is:          Bench.hs
  build-depends:    base
                  , bytestring
                  , adventofcode
                  , criterion
                  , mwc-random
  type:             exitcode-stdio-1.0

test-suite haddock
  default-language: Haskell2010
  hs-source-dirs:   test
  main-is:          Haddock.hs
  build-depends:    base
                  , foldl
                  , regex-compat
                  , text
                  , turtle
  type:             exitcode-stdio-1.0

source-repository head
  type:     git
  location: https://github.com/tylerjl/adventofcode
