name:                adventofcode
version:             0.1.0.0
synopsis:            Haskell solutions to adventofcode
description:         Please see README.md
homepage:            https://github.com/tylerjl/aoc-hs
license:             MIT
license-file:        LICENSE
author:              Tyler Langlois
maintainer:          ty@tjll.net
-- copyright:
category:            Web
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

executable adventofcode
  hs-source-dirs:      app
  main-is:             Main.hs
  other-modules:       Options
  default-extensions:  OverloadedStrings
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N -Wall -Werror
  build-depends:       adventofcode
                     , base
                     , bytestring
                     , optparse-generic
                     , safe
                     , text
                     , MissingH
                     , witch
  default-language:    Haskell2010

library
  hs-source-dirs:      src
  default-extensions:  QuasiQuotes
                     , OverloadedStrings
                     , TypeApplications
                     , ViewPatterns
  ghc-options:         -Wall -Werror
  exposed-modules:     Y2015
                     , Y2016
                     , Y2018
                     , Y2021
                     , Y2015.Util
                     , Y2015.D01
                     , Y2015.D02
                     , Y2015.D03
                     , Y2015.D04
                     , Y2015.D05
                     , Y2015.D06
                     , Y2015.D07
                     , Y2015.D08
                     , Y2015.D09
                     , Y2015.D10
                     , Y2015.D11
                     , Y2015.D12
                     , Y2015.D13
                     , Y2015.D14
                     , Y2015.D15
                     , Y2015.D16
                     , Y2015.D17
                     , Y2015.D18
                     , Y2015.D19
                     , Y2015.D20
                     , Y2015.D21
                     , Y2015.D22
                     , Y2015.D23
                     , Y2015.D24
                     , Y2015.D25
                     , Y2016.D01
                     , Y2016.D02
                     , Y2018.D01
                     , Y2018.D02
                     , Y2018.D03
                     , Y2018.D04
                     , Y2018.D05
                     , Y2021.D01
                     , Y2021.D02
                     , Y2021.D03
                     , Y2021.D04
                     , Y2021.D05
                     , Y2021.D06
  build-depends:       aeson
                     , base >= 4.7 && < 5
                     , base16-bytestring
                     , bytestring
                     , containers
                     , cryptohash
                     , extra
                     , lens
                     , matrix
                     , memoize
                     , MissingH
                     , parsec
                     , repa
                     , safe
                     , scientific
                     , text
                     , time
                     , unordered-containers
                     , vector
                     , witch
  default-language:    Haskell2010

test-suite adventofcode-test
  type:                exitcode-stdio-1.0
  build-tool-depends:  hspec-discover:hspec-discover
  default-extensions:  TypeApplications
                     , OverloadedStrings
  hs-source-dirs:      test
  main-is:             Spec.hs
  other-modules:       Y2015.D01Spec
                     , Y2015.D02Spec
                     , Y2015.D03Spec
                     , Y2015.D04Spec
                     , Y2015.D05Spec
                     , Y2015.D06Spec
                     , Y2015.D07Spec
                     , Y2015.D08Spec
                     , Y2015.D09Spec
                     , Y2015.D10Spec
                     , Y2015.D11Spec
                     , Y2015.D12Spec
                     , Y2015.D13Spec
                     , Y2015.D14Spec
                     , Y2015.D15Spec
                     , Y2015.D17Spec
                     , Y2015.D18Spec
                     , Y2015.D19Spec
                     , Y2015.D20Spec
                     , Y2015.D21Spec
                     , Y2015.D22Spec
                     , Y2015.D23Spec
                     , Y2015.D24Spec
                     , Y2015.D25Spec
                     , Y2016.D01Spec
                     , Y2016.D02Spec
                     , Y2018.D01Spec
                     , Y2018.D02Spec
                     , Y2018.D03Spec
                     , Y2018.D04Spec
                     , Y2018.D05Spec
                     , Y2021.D01Spec
                     , Y2021.D02Spec
                     , Y2021.D03Spec
                     , Y2021.D04Spec
                     , Y2021.D05Spec
                     , Y2021.D06Spec
  build-depends:       base
                     , adventofcode
                     , bytestring
                     , containers
                     , hspec
                     , text
                     , witch
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

benchmark criterion
  default-language:   Haskell2010
  default-extensions: TypeApplications
  hs-source-dirs:     benchmark
  main-is:            Bench.hs
  other-modules:      Y2015.Bench
                    , Y2016.Bench
                    , Y2021.Bench
  build-depends:      base
                    , bytestring
                    , adventofcode
                    , criterion
                    , mwc-random
                    , text
                    , witch
  type:               exitcode-stdio-1.0

source-repository head
  type:     git
  location: https://github.com/tylerjl/aoc-hs
